# sd3

./: .gitignore  Makefile  ferris.data
arm11/: Cargo.toml  link.ld  sd3_arm11.json
arm11/.cargo/: config
arm11/src/: boot11.rs  exceptions.rs  gpu.rs  lcd.rs  main.rs  mpcore.rs  panic.rs
arm11/src/mpcore/: interrupt_distributor.rs
arm9/: Cargo.toml  link.ld  sd3_arm9.json
arm9/.cargo/: config
arm9/src/: i2c.rs  main.rs  timer.rs
common/: Cargo.toml
common/src/: console.rs  input.rs  lib.rs  mem.rs  util.rs
common/src/input/: game_pad.rs  pad_state.rs
common/src/util/: reg.rs
firmtool/: Cargo.toml
firmtool/src/: builder.rs  header.rs  lib.rs  main.rs
formats/: firm.ksy
