[package]
name = "sd3_arm11"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["arm11"] }
volatile = { version = "0.2.6", features = ["const_fn"] }
bitflags = "1.1.0"
num-traits = { version = "0.2.8", default-features = false }
